[FIX][TAS-185] [FIX][TAS-185] Remove fixed height from form-control and fix header alignment
Remove height: 33px from .form-control so the address autocomplete input
can size naturally. Switch .mw-header to flexbox with align-items: center
so buttons and input stay vertically centred on the same row regardless
of input height. Use margin-left: auto instead of float: right to
right-align the address input wrap within the flex container.

--- a/places/static/places/css/map_widgets.css
+++ b/places/static/places/css/map_widgets.css
@@ -95,7 +95,6 @@
     box-sizing: border-box;
     display: block;
     width: 100%;
-    height: 33px;
     padding: 6px 12px;
     font-size: 14px;
     line-height: 1.42857143;
@@ -134,11 +133,16 @@
 }
 
 .mw-header {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 4px;
     margin-bottom: 6px;
 }
 
 .mw-header .mw-adress-input-wrap {
     width: 35%;
+    margin-left: auto;
 }
 
 .mw-header .mw-adress-input-wrap gmp-place-autocomplete {
